<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_code" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_name" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/academic_year" />

    <TextView
        android:id="@+id/textViewSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester" />


    <TextView
        android:id="@+id/textViewCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_credit" />

    <TextView
        android:id="@+id/textViewVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venue" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/returns" />
</LinearLayout>
